crates/test-files/fixtures/compile_errors/ctx_not_after_self.fe
contract Foo {
    pub fn bar(self, baz: u256, ctx: Context) {}
}
